# polyglot

./: .bazelrc  .gitignore  .npmrc  AGENT.md  AGENTS.compressed.md  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  WORKSPACE  example.ts  go.work  go.work.sum  package.json  requirements.txt  turbo.json
.buildkite/: pipeline.yml
.buildkite/scripts/: kotlin-integration-test.sh
.github/workflows/: ci.yaml
db/: BUILD.bazel  README.md  schema.sql
db/migrations/: 20260421000000_create_bracket_pair.sql
golang/: BUILD.bazel  README.md  go.mod  main.go
golang/brackets/: BUILD.bazel  brackets.go  brackets_test.go
golang/cmd/: BUILD.bazel
golang/cmd/brackets/: BUILD.bazel  go.mod  go.sum  main.go
golang/main/: BUILD.bazel  main.go
golang/pkg/libs/brackets/: BUILD.bazel  brackets_test.go  generate.go  go.mod  go.sum
golang/wasmtest/: empty_main.wasm  go.mod  hello_world.go  io_writer.wasm  with_fmt.wasm  without_fmt.wasm
java/: README.md
java/src/main/java/bracketsjava/: BUILD.bazel  Brackets.java
java/src/test/java/bracketsjava/: BUILD.bazel  BracketsTest.java
kotlin/: BUILD.bazel  README.md
kotlin/src/main/kotlin/brackets/: BUILD.bazel  brackets.kt
kotlin/src/main/kotlin/bracketskt/: BUILD.bazel  brackets.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/client/: BUILD.bazel  client.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/config/: BUILD.bazel  Config.kt  ConfigCommand.kt  ConfigLoader.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/db/: BUILD.bazel  BracketPairRepository.kt  BracketsDbModule.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/db/codegen/: BUILD.bazel  JooqCodegenRunner.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/service/: BUILD.bazel  BalanceServiceEndpoint.kt  BracketsServiceTelemetry.kt  service.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/service/dagger/: ApplicationGraph.kt  ApplicationGraphModule.kt  DatabaseModule.kt  DatabaseSupport.kt  GrpcCallScopeGraph.kt  GrpcCallScopeGraphModule.kt  GrpcHandlersModule.kt  InterceptorsModule.kt  ServerModule.kt  TelemetryModule.kt
kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/telemetry/: BUILD.bazel  OtelExtensions.kt  TelemetrySetup.kt
kotlin/src/main/resources/: BUILD.bazel  logback.xml
kotlin/src/main/resources/client/: application.yml
kotlin/src/main/resources/service/: application.yml
kotlin/src/test/kotlin/brackets/: BUILD.bazel  BracketsTest.kt
kotlin/src/test/kotlin/bracketskt/: BUILD.bazel  BracketsTest.kt
kotlin/src/test/kotlin/com/geekinasuit/polyglot/brackets/config/: BUILD.bazel  TelemetryConfigTest.kt
kotlin/src/test/kotlin/com/geekinasuit/polyglot/brackets/db/: BUILD.bazel  BracketPairRepositoryTest.kt  JooqCodegenSmokeTest.kt
kotlin/src/test/kotlin/com/geekinasuit/polyglot/brackets/service/: BUILD.bazel  BalanceServiceEndpointTest.kt
kotlin/src/test/kotlin/com/geekinasuit/polyglot/brackets/service/dagger/: ApplicationGraphTest.kt  BUILD.bazel  FakeTelemetryModule.kt  TestApplicationGraph.kt  TestApplicationGraphModule.kt  TestDatabaseModule.kt
protobuf/: BUILD.bazel  Cargo.toml  brackets_service.proto  build.rs  example.proto
protobuf/src/: lib.rs
python/: BUILD.bazel
python/brackets/: BUILD.bazel  brackets_lib.py
python/brackets_py_lib/: BUILD.bazel  brackets_lib.py  brackets_lib_test.py
python/tests/: BUILD.bazel  test_brackets_lib.py  test_grpc.py
rust/: Cargo.toml
rust/bracketslib/: BUILD.bazel  Cargo.toml
rust/bracketslib/src/: lib.rs
rust/wasmtest/: Cargo.toml
thoughts/shared/decisions/: 2026-04-21-endpoint-grpccallscope-and-map-injection.md  2026-04-21-migration-filename-convention.md  2026-04-22-endpoint-depends-on-pair-map-not-repository.compressed.md  2026-04-22-endpoint-depends-on-pair-map-not-repository.md  2026-04-22-endpoint-grpccallscope-and-map-injection.compressed.md  2026-04-22-endpoint-grpccallscope-and-map-injection.md  2026-04-22-seed-data-in-migration.compressed.md  2026-04-22-seed-data-in-migration.md
thoughts/shared/handoffs/: 2026-04-25-python-parity-handoff.compressed.md  2026-04-25-python-parity-handoff.md
thoughts/shared/plans/: 2026-03-06-buildkite-ci.md  2026-03-07-grpc-kotlin-bzlmod-migration.md  2026-03-07-kotlin-otel-instrumentation.md  2026-03-22-kotlin-dagger-grpc-di.md  2026-04-21-db-kotlin-feature.compressed.md  2026-04-21-db-kotlin-feature.md  2026-04-25-python-parity-implementation-plan.compressed.md  2026-04-25-python-parity-implementation-plan.md
thoughts/shared/research/: 2026-03-05-polyglot-codebase-overview.compressed.md  2026-03-05-polyglot-codebase-overview.md  2026-04-21-multi-agent-tdd-workflow.compressed.md  2026-04-21-multi-agent-tdd-workflow.md  2026-04-22-db-feature-architecture.compressed.md  2026-04-22-db-feature-architecture.md  2026-04-22-db-schema-design.compressed.md  2026-04-22-db-schema-design.md
thoughts/shared/tickets/: BUILD-001-grpc-kotlin-bzlmod-migration.md  CI-001-github-action-ticket-close-sync.md  CI-002-cross-language-e2e-matrix.md  CI-003-integration-test-grpc-readiness-probe.md  CI-004-buildkite-ci-env-validation.md  CI-005-macos-agent-isolation.md  DB-001-schema-migrations-setup.md  GO-001-go-grpc-client-server.md  GO-002-go-grpc-library-wrong-proto-target.md  JAVA-001-java-grpc-client-server.md  KT-001-kotlin-grpc-interceptors-not-implemented.md  KT-002-kotlin-dagger-grpc-di.md  KT-003-kotlin-dagger-client-di.md  KT-004-kotlin-docker-deployment.md  KT-005-jooq-codegen.md  KT-006-database-adapter.md  KT-007-bracket-config-feature.md  PY-001-python-grpc-client-server.md  PY-002-python-proto-integration-incomplete.md  PY-003-python-src-structure-restructure.md  PY-004-python-grpc-generation-setup.md  PY-005-python-grpc-service-implementation.md  (+22 more)
typescript/: BUILD.bazel  tsconfig.json
typescript/bracketslib/: BUILD.bazel  brackets.ts
typescript/lib/: BUILD.bazel  brackets.service.ts
typescript/proto/: brackets_service.ts
typescript/server/: BUILD.bazel  app.module.ts  brackets.controller.ts  main.ts
util/: kt_jvm_proto.bzl
(+1 files in other folders)
