[workspace]
resolver = "2"

members = [
    "protobuf",
    "rust/bracketslib",
]

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
readme = "README.md"

[workspace.dependencies]
assertor = { version = "*", features = ["anyhow"] }
thiserror = "2.0.11"
tonic = "0.13.1"
tonic-build = "0.13.1"
tokio = { version = "1.45.0", features = ["full"]}
prost = "0.13.5"

