load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

kt_jvm_proto_library(
    name = "balance_proto_gen",
    visibility = ["//visibility:public"],
    deps = ["//protobuf:balance_rpc"],
)

kt_jvm_grpc_library(
    name = "balance_grpc_gen",
    srcs = ["//protobuf:balance_rpc"],
    visibility = ["//visibility:public"],
    deps = [":balance_proto_gen"],
)

# Codegen runner binary
java_binary(
    name = "jooq_codegen_runner",
    main_class = "com.geekinasuit.polyglot.brackets.db.codegen.JooqCodegenRunnerKt",
    runtime_deps = [
        "//kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/db/codegen:jooq_codegen_runner_lib",
    ],
)

# JOOQ generates exactly these files for the current schema (verified against DDLDatabase output
# with jooq-meta-extensions 3.19.11). If a future schema change or JOOQ upgrade causes the genrule
# to fail with "unexpected output", run the runner manually to /tmp/out and compare:
#   bazel run //kotlin:jooq_codegen_runner -- db/migrations/20260421000000_create_bracket_pair.sql /tmp/out
#   find /tmp/out -name "*.java" | sort
# $(locations //db:migrations) expands to sorted paths — matches the timestamp-prefix migration
# naming convention, so DDL execution order is stable across multiple migration files.
genrule(
    name = "jooq_generated_srcs",
    srcs = ["//db:migrations"],
    outs = [
        "com/geekinasuit/polyglot/brackets/db/jooq/DefaultCatalog.java",
        "com/geekinasuit/polyglot/brackets/db/jooq/DefaultSchema.java",
        "com/geekinasuit/polyglot/brackets/db/jooq/Keys.java",
        "com/geekinasuit/polyglot/brackets/db/jooq/Tables.java",
        "com/geekinasuit/polyglot/brackets/db/jooq/tables/BracketPair.java",
        "com/geekinasuit/polyglot/brackets/db/jooq/tables/records/BracketPairRecord.java",
    ],
    cmd = "$(location :jooq_codegen_runner) $(locations //db:migrations) $(@D)",
    tools = [":jooq_codegen_runner"],
)

kt_jvm_library(
    name = "jooq_db_lib",
    srcs = [":jooq_generated_srcs"],
    deps = ["@maven//:org_jooq_jooq"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "brackets_client",
    main_class = "com.geekinasuit.polyglot.brackets.client.ClientKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/client:client_lib",
    ],
)

java_binary(
    name = "brackets_service",
    main_class = "com.geekinasuit.polyglot.brackets.service.ServiceKt",
    visibility = ["//visibility:public"],
    data = ["//db:migrations"],
    runtime_deps = [
        "//kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/service:service_lib",
    ],
)
