load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "protobuf",
    srcs = ["example.proto"],
    # deps = ["@com_google_protobuf//:timestamp_proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "balance_rpc",
    srcs = ["brackets_service.proto"],
    # deps = ["@com_google_protobuf//:timestamp_proto"],
    visibility = ["//visibility:public"],
)
