load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "brackets",
    srcs = ["__init__.py", "brackets_lib.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("protobuf"),
        "//python:example_proto_gen",
    ],
)