load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")

py_library(
    name = "brackets_py_lib",
    srcs = ["brackets_lib.py"],
    visibility = ["//visibility:public"],
    deps = [":example_proto_py"],
)

py_proto_library(
    name = "example_proto_py",
    visibility = ["//visibility:public"],
    deps = ["//protobuf:example_proto"],
)

py_test(
    name = "brackets_lib_test",
    srcs = ["brackets_lib_test.py"],
    deps = [
        ":brackets_py_lib",
        requirement("pytruth"),
    ],
)
