java_library(
    name = "service_resources",
    resources = [
        "logback.xml",
        "service/application.yml",
    ],
    resource_strip_prefix = "kotlin/src/main/resources",
    visibility = ["//visibility:public"],
)

java_library(
    name = "client_resources",
    resources = [
        "logback.xml",
        "client/application.yml",
    ],
    resource_strip_prefix = "kotlin/src/main/resources",
    visibility = ["//visibility:public"],
)
