load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//util:kt_jvm_proto.bzl", "kt_jvm_proto_library")

kt_jvm_library(
    name = "bracketskt",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        ":example_proto_kt",
    ],
)

kt_jvm_proto_library(
    name = "example_proto_kt",
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf",
    ],
)
