load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

kt_jvm_library(
    name = "client_lib",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//kotlin:balance_grpc_gen",
        "//kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/config:config_lib",
        "//kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/telemetry:telemetry_lib",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_opentelemetry",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:net_logstash_logback_logstash_logback_encoder",
        "//kotlin/src/main/resources:client_resources",
    ],
)
