load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "telemetry_lib",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//kotlin/src/main/kotlin/com/geekinasuit/polyglot/brackets/config:config_lib",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_opentelemetry",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_sdk",
        "@maven//:io_opentelemetry_opentelemetry_exporter_otlp",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:io_opentelemetry_instrumentation_opentelemetry_logback_appender_1_0",
    ],
)
